apps/tetra/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetra-ingress
spec:
  rules:
    - host: tetra.tetramobile.ae
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: tetra-api-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: tetra-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetra-web-service
                port:
                  number: 3000
